--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -5,6 +5,7 @@
   border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
+  background-color: $header-color;
 
   // Positioning context for the mobile navigation icon
   position: relative;
@@ -18,10 +19,10 @@
   margin-bottom: 0;
   float: left;
 
-  &,
-  &:visited {
-    color: $grey-color-dark;
-  }
+}
+
+.site-title:visited {
+  color: $brand-color;
 }
 
 .site-nav {
@@ -37,7 +38,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: #607355;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -108,6 +109,7 @@
 .site-footer {
   border-top: 1px solid $grey-color-light;
   padding: $spacing-unit 0;
+  background-color: $header-color;
 }
 
 .footer-heading {
@@ -178,6 +180,7 @@
 .page-content {
   padding: $spacing-unit 0;
   flex: 1;
+  background-color: #fbf6ea;
 }
 
 .page-heading {
@@ -186,6 +189,7 @@
 
 .post-list-heading {
   @include relative-font-size(1.75);
+  color: $green-color;
 }
 
 .post-list {
@@ -220,6 +224,7 @@
   @include relative-font-size(2.625);
   letter-spacing: -1px;
   line-height: 1;
+  color: $green-color;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
